--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h1>Validador de QR</h1>
+  <button id="scan-btn">📷 Escanear QR</button>
   <video id="video" autoplay playsinline></video>
   <canvas id="canvas" hidden></canvas>
 
